--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.1
+pytz==2024.1
 SQLAlchemy==2.0.29
 typing_extensions==4.10.0
 yarl==1.9.4
